--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!-- 
+copyright 2018
+
+-->
 <head>
 	<title>An Exaample website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
