--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ copyright 2018
 
 -->
 <head>
-	<title>An Exaample website</title>
+	<title>A Great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ copyright 2018
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Dummy
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git 2014</p>
 	</footer>
 </body>
 </html>
