mb adding conflicting changes

--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@ adding changes before conflicts
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-
+			Just stuff for now
 			Dummy
 		</p>
 	</main>
