local: updating simple.html

--- a/simple.html
+++ b/simple.html
@@ -26,7 +26,7 @@ adding changes before conflicts
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git 2014</p>
+		<p>&copy; All rights reserved</p>
 
 	</footer>
 </body>
