done with updates

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@ adding changes before conflicts
 -->
 <head>
 
-	<title>A Great website</title>
+	<title>Updating title for stash</title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -21,8 +21,7 @@ adding changes before conflicts
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just stuff for now
-			Dummy
+			Adding moree important
 		</p>
 	</main>
 	<footer class="container">
