updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@ adding changes before conflicts
 -->
 <head>
 
-	<title>Title updateddddd</title>
+	<title>Title updateddddd for compa</title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
